--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,62 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link
+      rel="preload"
+      href="/src/assets/fonts/Maax-Bold2.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/src/assets/fonts/Ballpoint-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <meta name="theme-color" content="#f8521a" />
+
+    <title>Palmarito Bacanora | Tradición y Destilado Artesanal Premium</title>
+    <meta
+      name="description"
+      content="Descubre el sabor auténtico del Bacanora Palmarito. Un destilado artesanal que captura la esencia del desierto. Compra en línea y conoce nuestra historia."
+    />
+    <link rel="canonical" href="https://www.palmaritobacanora.com/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.palmaritobacanora.com/" />
+    <meta
+      property="og:title"
+      content="Palmarito Bacanora | El Alma del Desierto"
+    />
+    <meta
+      property="og:description"
+      content="Destilado artesanal premium con herencia mexicana. Explora nuestra tienda y academia de mixología."
+    />
+    <meta
+      property="og:image"
+      content="https://www.palmaritobacanora.com/img/preview-compartir.jpg"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Palmarito Bacanora | El Alma del Desierto"
+    />
+    <meta
+      name="twitter:description"
+      content="Destilado artesanal premium con herencia mexicana. Compra nuestra colección exclusiva aquí."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.palmaritobacanora.com/img/preview-compartir.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
